--- a/test.html
+++ b/test.html
@@ -3,11 +3,42 @@
   <head>
     <meta charset="utf-8">
     <title>Test</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <style>
+        figure {
+            margin-left: 2cm;
+            border: 1px solid gray;
+        }
+    </style>
   </head>
   <body>
+    <a href="#myModal" role="button" class="btn" data-toggle="modal">Edit
+        selected</a>
+    <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog"
+        aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal"
+                aria-hidden="true">×</button>
+            <h3 id="myModalLabel">Modal header</h3>
+        </div>
+        <div class="modal-body">
+            <figure id="edit"></figure>
+        </div>
+        <div class="modal-footer">
+            <button class="btn"
+                data-dismiss="modal"
+                aria-hidden="true">Close</button>
+            <button class="btn
+                btn-primary">Save
+                changes</button>
+        </div>
+    </div>
+
     <figure id="test"></figure>
   </body>
   <script src="lib/jquery.js"></script>
+  <script src="lib/bootstrap.min.js"></script>
   <script src="lib/raphael.js"></script>
   <script src="lib/bundle.js"></script>
 </html>
