updated the tangent tool

--- a/test.html
+++ b/test.html
@@ -35,8 +35,8 @@
         }
 
 
-        #d3test path {
-            stroke-width:1;
+        #d3test .graph path {
+            stroke-width: 2;
         }
 
         #d3test rect {
@@ -44,6 +44,10 @@
             stroke-opactiy: 0.4;
             stroke-width: 0.2;
 
+        }
+
+        .tangent {
+            stroke-width: 2
         }
 
     </style>
